2024年4月3日学习

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,9 @@ spring:
     password: example
     driver-class-name: com.mysql.cj.jdbc.Driver
     
+mybatis:
+  mapper-locations: /mapper/*.xml
+   
 #   port: 9090
 #   servlet:
 #     context-path: /start
